# tezos-context-trace

./: 0001-Lib_context-Add-irmin-stats.patch  README.md  dune-project  guix.scm  stats.patch
src/bin_context/: dune  manage_stats.ml  replay.ml
src/disk-recorder/: dune  tezos_context_disk_recorder.ml  tezos_context_disk_recorder.mli
src/lib_context/: dune
src/lib_context/disk/: context.ml  context.mli  dune  tezos_context_disk.ml
src/lib_context/disk_sigs/: dune  tezos_context_disk_sigs.ml
src/lib_context/helpers/: env.ml
src/lib_context/memory/: context.ml
src/lib_context/recording/: dune  raw_actions_trace_recorder.ml  recorder.ml  shim.ml  shim.mli  stats_trace_definition.ml  stats_trace_recorder.ml
src/lib_context/replay/: dune  raw_trace_actions_to_replayable.ml  trace_replay.ml  trace_replay_intf.ml  trace_stats_summary.ml  trace_stats_summary_pp.ml  trace_stats_summary_pp_gc.ml  trace_stats_summary_pp_gcs.ml  trace_stats_summary_utils.ml
src/lib_context/sigs/: context.ml
src/lib_context/test/: test_context.ml
src/recorder/: dune  raw_actions_trace_recorder.ml  recorder.ml  shim.ml  shim.mli  stats_trace_recorder.ml
src/replay/: dune  manage_actions.ml  manage_stats.ml  replay.ml
src/tezos-context-recording/: dune  misc.ml  raw_actions_trace_definition.ml  raw_actions_trace_recorder.ml  recorder.ml  shim.ml  shim.mli  stats_trace_definition.ml  stats_trace_recorder.ml  trace_auto_file_format.ml  trace_auto_file_format_intf.ml  trace_common.ml
src/tezos-context-replay/: dune  raw_trace_actions_to_replayable.ml  replay_actions_trace_definitions.ml  trace_raw_actions_summary.ml  trace_replay.ml  trace_replay_intf.ml  trace_stats_summary.ml  trace_stats_summary_conf.ml  trace_stats_summary_pp.ml  trace_stats_summary_pp_gc.ml  trace_stats_summary_utils.ml  trace_stats_summary_utils.mli  tzstat_metrics.ml
src/tezos-context-replay-tools/: dune  manage_actions.ml  replay.ml
src/tools/manage_actions/: dune  manage_actions.ml  raw_trace_actions_to_replayable.ml  trace_raw_actions_summary.ml  tzstat_metrics.ml
src/tools/manage_stats/: dune  manage_stats.ml
src/tools/replay/: dune  replay.ml  trace_replay.ml  trace_replay_intf.ml
src/tools/stats_summary/: dune  trace_stats_summary_utils.ml  trace_stats_summary_utils.mli
src/trace/: auto_file_format.ml  auto_file_format.mli  auto_file_format_intf.ml  common.mli  dune  raw_actions.ml  raw_actions_trace_definition.ml  raw_actions_trace_recorder.ml  recorder.ml  replay_actions.ml  replay_actions_trace_definitions.ml  stats.ml  stats_trace_recorder.ml  tezos_context_trace.ml  trace_auto_file_format.ml
