(executable
 (name manage_stats)
 (modules manage_stats)
 (libraries cmdliner tezos-context.recording tezos-context.replay))

(executable
  (name replay)
  (modules replay)
  (libraries cmdliner
             tezos-base
             tezos-context
             tezos-context.replay
             )
  (flags (:standard  -open Tezos_base__TzPervasives))
)

(executable
  (name manage_actions)
  (modules manage_actions)
  (libraries cmdliner

             tezos-context.recording
             tezos-context.replay))
