(library
 (name tezos_context_recorder)
 (public_name tezos-context-trace-recorder)
 (libraries
  tezos-base
  tezos-stdlib-unix
  tezos-context.encoding
  tezos-context.disk
  tezos-context.sigs
  tezos-context.memory
  tezos-context-trace
  repr
  irmin
  rusage
  bentov
  printbox
  printbox-text)
 (preprocess
  (pps ppx_repr ppx_deriving.enum))
 (modules
  misc
  ;raw_actions_trace_definition
  raw_actions_trace_recorder
  recorder
  shim
  stats_trace_recorder
  ; trace_raw_actions_summary
  ;trace_stats_summary
  ; trace_stats_summary_cb
  ;trace_stats_summary_conf
  ;trace_stats_summary_pp
  ;trace_stats_summary_utils
  )
 (flags
  (:standard
   -open
   Tezos_base__TzPervasives
   -open
   Tezos_stdlib_unix
   -open
   Tezos_stdlib)))
