(executable
 (name manage_stats)
 (public_name tezos-context-manage-stats)
 (modules manage_stats)
 (package tezos-context-replay-tools)
 (libraries cmdliner tezos-context-recording tezos-context-replay))

(executable
 (name replay)
 (public_name tezos-context-replay)
 (modules replay)
 (package tezos-context-replay-tools)
 (libraries cmdliner tezos-base tezos-context tezos-context-replay)
 (flags
  (:standard -open Tezos_base__TzPervasives)))

(executable
 (name manage_actions)
 (public_name tezos-context-manage-actions)
 (modules manage_actions)
 (package tezos-context-replay-tools)
 (libraries cmdliner tezos-context-recording tezos-context-replay))
