(executable
 (name replay)
 (public_name tezos-context-replay)
 (package tezos-context-trace-tools)
 (libraries
  cmdliner
  tezos-base
  tezos-context
  tezos-context-trace-tools.stats_summary
  tezos-context-trace-recorder)
 (preprocess
  (pps ppx_repr ppx_deriving.enum ppx_deriving_yojson))
 (flags
  (:standard -open Tezos_base__TzPervasives)))
